--- a/style.css
+++ b/style.css
@@ -21,6 +21,15 @@ div {
   background-color: blue;
 }
 
+.green {
+  background-color: green;
+}
+
+.yellow {
+  background-color: yellow;
+}
+
+
 .invisible {
   display: none;
 }
